# codewall

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
n2g/: __init__.py  api.py  auth.py  config.py  github.py  harvester.py  mockdata.py  persist.py  snapshot.py
static/: .gitkeep
templates/: dashboard.html  share.html
tests/: test_auth.py  test_config.py  test_harvester.py  test_persist.py  test_smoke.py  test_snapshot.py
tests/fixtures/: graphql_page.json
tools/: make_og_image.py
