[project]
name = "codewall"
version = "0.1.0"
description = "NET2GRID GitHub activity wall: live org activity dashboard"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "gunicorn>=21.2",
    "python-dotenv>=1.0",
    "google-auth>=2.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "playwright>=1.44",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
